--- a/.htaccess
+++ b/.htaccess
@@ -7,3 +7,5 @@ RewriteRule ^(.*)$ index.php/$1 [L]
     Header set Access-Control-Allow-Origin "*"
   </FilesMatch>
 </IfModule>
+RewriteCond %{HTTPS} !=on
+RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
