--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,14 @@
-RewriteEngine on
+RewriteEngine On
 RewriteCond $1 !^(index\.php|content|robots\.txt)
 RewriteCond $1 !^(index\.php|documentacao|robots\.txt)
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php/$1 [L]
+
 <IfModule mod_headers.c>
   <FilesMatch "\.(ttf|ttc|otf|eot|woff|woff2|font.css|css|js)$">
     Header set Access-Control-Allow-Origin "*"
   </FilesMatch>
 </IfModule>
-RewriteCond %{HTTPS} !=on
-RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
+
